[photo_editor] authentication added
